--- a/client/components/organization-list/organization-list.html
+++ b/client/components/organization-list/organization-list.html
@@ -11,4 +11,8 @@
       <button (click)="removeOrganization(org)">X</button>
     </li>
   </ul>
+  <div>
+      <h4>upload-xlsx:</h4>
+      <upload-xlsx></upload-xlsx>
+  </div>
 </div>
