--- a/client/pages/dashboard/components/organization-details/organization-details.html
+++ b/client/pages/dashboard/components/organization-details/organization-details.html
@@ -15,7 +15,7 @@
     </div> 
     <div>
         <label [routerLink]="['/OrganizationEventsManagmantPage', {organizationId: organization._id}]">Events:</label><button>+</button>
-        <event-list [organizationId]="organization._id"></event-list>
+        <!--<event-list [organizationId]="organization._id"></event-list>-->
     </div> 
     <div>
         <label [routerLink]="['/OrganizationUsersManagmantPage', {organizationId: organization._id}]">Users</label>
