intreduce new bug, EventEmitter instance .emit isnt recognized as a function, error throws but the app isnt crashing (if the submit button activates the emit the application reloads, I suspect form within a form)

--- a/client/components/event-form/event-form.html
+++ b/client/components/event-form/event-form.html
@@ -16,7 +16,7 @@
                 <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#masterList">Show Event Masters</button>
                 <hr>
                 <div id="masterList" class="collapse">
-                    <master-list></master-list>
+                    <master-list [masters]="eventModel.masters"></master-list>
                 </div>
             </div>
 
@@ -24,7 +24,7 @@
                 <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#masterForm">Add new master</button>
                 <hr>
                 <div id="masterForm" class="collapse">
-                    <master-form></master-form>
+                    <master-form (validMasterSubmited)="addMasterToEvent($event)"></master-form>
                 </div>
             </div>
 
@@ -36,9 +36,9 @@
                 <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#participantList">Show Event Participants</button>
                 <hr>
                 <div id="participantList" class="collapse">
-                    <participant-list></participant-list>
+                    <participant-list [participants]="eventModel.participants"></participant-list>
                 </div>
-            </div>
+            </div>  
 
             <!--collapsablei .shows the about to insert participants data-->
             <div>
