--- a/client/components/master-form/master-form.html
+++ b/client/components/master-form/master-form.html
@@ -1,7 +1,7 @@
 
 <div class="container">
     <h5>Add New Master</h5>
- <form [ngFormModel]="masterForm" #f="ngForm" (submit)="addMasterToEventForm(f.value)">
+ <form [ngFormModel]="masterForm" #f="ngForm" >
     <div class="form-group">
     <label>Full Name</label>
     <input type="text" ngControl="name">
@@ -21,7 +21,7 @@
     <input type="text" ngControl="ID">
     </div>   
 
-    <button>Add Master to event</button>
+    <button (click)="addMasterToEventForm(f.value)">Add Master to event</button>
 </form>
    
 </div> 
