event-form masters section skeleton ready, might split the forms in the future

--- a/client/components/master-list/master-list.html
+++ b/client/components/master-list/master-list.html
@@ -1,4 +1,8 @@
 
 <div class="container">
-    <h5>master-list</h5>
+   <ul>
+    <li *ngFor="#master of masters">
+      <p>{{master.name}}</p>
+    </li>
+  </ul>
 </div> 
