--- a/client/components/master-form/master-form.html
+++ b/client/components/master-form/master-form.html
@@ -20,6 +20,10 @@
     <label>ID Number</label>
     <input type="text" ngControl="ID">
     </div>   
+    <!--<div class="form-group">
+    <label>Activition Code</label>
+    <input type="text" ngControl="activitionCode">
+    </div>  -->
 
     <button (click)="addMasterToEventForm(f.value)">Add Master to event</button>
 </form>
