--- a/client/components/upload-xlsx/upload-xlsx.html
+++ b/client/components/upload-xlsx/upload-xlsx.html
@@ -1,5 +1,5 @@
 <div>
    <!-- <input type=”file” #fileInput (click)="test(fileInput)" />-->
-   <input type="file" id="fileinput" (change)="parseExcel($event)" />
+   <input type="file" id="fileinput" (change)="uploadExcelFile($event)" />
 
 </div>
